--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -111,6 +111,7 @@
   <script src="static/app/user/UserEditorController.js"></script>
   <script src="static/app/user/UserService.js"></script>
   <script src="static/app/user/CalendarService.js"></script>
+  <script src="static/app/user/ReminderService.js"></script>
 
   <script src="static/app/tasks/TasksController.js"></script>
   <script src="static/app/tasks/TaskEditorController.js"></script>
