--- a/frontend/cordova/src/main/resources/ios/index.html
+++ b/frontend/cordova/src/main/resources/ios/index.html
@@ -34,7 +34,7 @@
     var urlPrefix = 'https://ext.md';
     var html5Mode = false;
     var bindToFocusEvent = false;
-    var bindToResumeEvent = false;
+    var bindToResumeEvent = true;
     var enableOffline = true;
 
     // Wait for device API libraries to load
