Fixed tutorial complete analytics to use correct event

--- a/frontend/core/src/main/webapp/analytics/index.html
+++ b/frontend/core/src/main/webapp/analytics/index.html
@@ -190,7 +190,7 @@
     var visitNewUserQuery = baseUrl + "sum(visit_newUser)&step=864e5&start=" + startDay + "&stop=" + endDay;
     var startTutorialQuery = baseUrl + "sum(startTutorial)&step=864e5&start=" + startDay + "&stop=" + endDay;
     var skipTutorialQuery = baseUrl + "sum(skipTutorial)&step=864e5&start=" + startDay + "&stop=" + endDay;
-    var tutorialCompleteQuery = baseUrl + "sum(onboarded)&step=864e5&start=" + startDay + "&stop=" + endDay;
+    var tutorialCompleteQuery = baseUrl + "sum(completeTutorial)&step=864e5&start=" + startDay + "&stop=" + endDay;
     var signUpQuery = baseUrl + "sum(signUp)&step=864e5&start=" + startDay + "&stop=" + endDay;
     var mauStartDate = new Date();
     mauStartDate.setMonth(mauStartDate.getMonth() - 1);
