Added possibility to set cordova backend URL with -Dcordova.urlPrefix maven variable

--- a/frontend/cordova/src/main/resources/ios/index.html
+++ b/frontend/cordova/src/main/resources/ios/index.html
@@ -31,7 +31,7 @@
   <script>
     var packaging = "ios-cordova";
     var version = "${project.version}";
-    var urlPrefix = 'https://ext.md';
+    var urlPrefix = "${cordova.urlPrefix}";
     var html5Mode = false;
     var bindToFocusEvent = false;
     var bindToResumeEvent = true;
