--- a/frontend/cordova/src/main/resources/android/index.html
+++ b/frontend/cordova/src/main/resources/android/index.html
@@ -32,7 +32,7 @@
   <script>
     var packaging = "android-cordova";
     var version = "${project.version}";
-    var urlPrefix = 'https://ext.md';
+    var urlPrefix = "${cordova.urlPrefix}";
     var html5Mode = false;
     var bindToFocusEvent = false;
     var bindToResumeEvent = true;
