--- a/frontend/core/src/main/webapp/static/app/main/settings.html
+++ b/frontend/core/src/main/webapp/static/app/main/settings.html
@@ -26,12 +26,11 @@
 
     <div class="group-mixed with-checkbox">
       <div class="group-mixed--left">
-        <input type="checkbox" ng-class="isToggleDisabled('notes') && 'downplayed'"
-          ng-model="settings.notes" ng-true-value="true"
+        <input type="checkbox" ng-model="settings.notes" ng-true-value="true"
           icon-checkbox="'notes'" ng-click="featureCheckboxClicked('notes')"/>
       </div>
       <div class="group-mixed--middle">
-        <span class="text-link" ng-class="isToggleDisabled('notes') && 'downplayed'">notes</span>
+        <span class="text-link">notes</span>
       </div>
     </div>
 
