Added tutorial help text to click on blinking text

--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -606,8 +606,10 @@
       <h2 class="group-heading instruction row">
         <span>tutorial <span class="highlighted">complete</span>!</span>
       </h2>
-      <div class="textgroup-ingress row">play, search and explore,
-        <span class="text-highlighted">extended mind</span> is yours
+      <div class="textgroup-ingress row">click on <a href ng-click="blinkingTextClicked = true"
+        ng-class="!blinkingTextClicked && 'onboarding'">
+        <span class="text-heading">blinking text</span></a> anywhere
+        in the app to find new places and unlock features
       </div>
     </div>
 
