Removed a few unnecessary FIXMEs from layout, overrides.less is not a good idea

--- a/frontend/core/src/main/webapp/landing/index.html
+++ b/frontend/core/src/main/webapp/landing/index.html
@@ -129,17 +129,17 @@
         <span>it's time to let the biological mind do what it does best:</span>
       </div>
       <div id="em-animation-11" class="hide">
-        <span id="em-animation-11-create" class="hidden animation-word">create</span>
-        <span id="em-animation-11-connect" class="hidden animation-word">connect</span>
-        <span id="em-animation-11-care" class="hidden animation-word">care</span>
+        <span id="em-animation-11-create" class="invisible animation-word">create</span>
+        <span id="em-animation-11-connect" class="invisible animation-word">connect</span>
+        <span id="em-animation-11-care" class="invisible animation-word">care</span>
       </div>
       <div id="em-animation-12" class="hide">
         <span>it's time for the digital mind to do what it does best:</span>
       </div>
       <div id="em-animation-13" class="hide">
-        <span id="em-animation-13-focus" class="hidden animation-word">focus</span>
-        <span id="em-animation-13-organize" class="hidden animation-word">organize</span>
-        <span id="em-animation-13-keep" class="hidden animation-word">keep</span>
+        <span id="em-animation-13-focus" class="invisible animation-word">focus</span>
+        <span id="em-animation-13-organize" class="invisible animation-word">organize</span>
+        <span id="em-animation-13-keep" class="invisible animation-word">keep</span>
       </div>
       <div id="em-animation-14" class="hide">
         <span>this is not a piece of software</span>
@@ -148,10 +148,10 @@
         <span>this is an <b>extension</b> to your <b>mind</b></span>
       </div>
       <div id="em-animation-16" class="hide">
-        <span id="em-animation-16-change" class="hidden text-jumbotron">change</span><br/>
-        <span id="em-animation-16-way" class="hidden text-jumbotron">the way</span><br/>
-        <span id="em-animation-16-you" class="hidden text-jumbotron">you</span><br/>
-        <span id="em-animation-16-think" class="hidden text-jumbotron highlighted">think</span>
+        <span id="em-animation-16-change" class="invisible text-jumbotron">change</span><br/>
+        <span id="em-animation-16-way" class="invisible text-jumbotron">the way</span><br/>
+        <span id="em-animation-16-you" class="invisible text-jumbotron">you</span><br/>
+        <span id="em-animation-16-think" class="invisible text-jumbotron highlighted">think</span>
       </div>
     </div>
   </div>
