Refactored .group-mixed.vertically-centered in listEditor.html.

--- a/frontend/core/src/main/webapp/static/app/lists/listEditor.html
+++ b/frontend/core/src/main/webapp/static/app/lists/listEditor.html
@@ -91,7 +91,7 @@
             </textarea>
           </div>
           <div ng-repeat="sharedTo in sharedToList">
-            <div class="group-mixed vertically-centered">
+            <div class="group-mixed">
               <div class="group-mixed--middle">
                 <span class="text-normal">{{sharedTo.email}}, {{sharedTo.mode}}, {{sharedTo.acceptStatus}}</span>
               </div>
