Started tearing down .with-checkbox class used with .group-mixed and making that style the default mixed group. Fixed user page.

--- a/frontend/core/src/main/webapp/static/app/user/userHome.html
+++ b/frontend/core/src/main/webapp/static/app/user/userHome.html
@@ -85,7 +85,7 @@
     </div>
 
     <!-- ACCOUNT -->
-    <div class="group-mixed">
+    <div class="group-mixed vertically-centered">
       <a href class="group-mixed--middle link" swiper-click="swipeToDetails('account')">
         <span class="text-link">account</span>
       </a>
@@ -97,7 +97,7 @@
     </div>
 
     <!-- ABOUT -->
-    <div class="group-mixed">
+    <div class="group-mixed vertically-centered">
       <a href class="group-mixed--middle link" swiper-click="swipeToDetails('about')">
         <span class="text-link">about</span>
       </a>
@@ -109,14 +109,14 @@
     </div>
 
     <!-- ADMIN -->
-    <div ng-if="isAdmin()" class="group-mixed">
+    <div ng-if="isAdmin()" class="group-mixed vertically-centered">
       <a href class="group-mixed--middle link" swiper-click="changeFeature('admin')">
         <span class="text-link">admin</span>
       </a>
     </div>
 
     <!-- PREMIUM -->
-    <div ng-if="isAdmin()" class="group-mixed">
+    <div ng-if="isAdmin()" class="group-mixed vertically-centered">
       <a href class="group-mixed--middle link" swiper-click="swipeToDetails('premium')">
         <span class="text-link">get premium</span>
       </a>
