--- a/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/tasksContexts.html
@@ -2,7 +2,7 @@
   <section ng-show="isContentVisible('tasks', 'contexts')" class="container-content" list="contexts">
     <h2 class="group-heading justified row">contexts</h2>
     <div list-item-add="getNewContext()" list-item-add-save="saveContext(newItem)">
-      <form role="form" class="group-mixed swiper-no-swiping"
+      <form role="form" class="group-mixed vertically-centered swiper-no-swiping"
         data-snap-ignore="true" editable-field-container
         editable-field-container-clicked-elsewhere="clickedElsewhere()"
         autocapitalize="none" autocorrect="off">
@@ -22,7 +22,7 @@
     <div class="animate-list-item-leave"
       ng-repeat="context in listInfos.array = (getFullArray()) | orderBy:'trans.created':true
       | limitTo: currentListLimitTo track by context.trans.uuid" list-item>
-      <div class="group-mixed">
+      <div class="group-mixed vertically-centered">
         <a href class="group-mixed--middle link-list-item" swiper-click="swipeToContext(context)">
           <span class="text-link" clamp=2 ng-bind="'@' + context.trans.title"></span>
         </a>
@@ -34,7 +34,7 @@
       </div>
     </div>
     <div list-prompt list-prompt-infos="listInfos" list-prompt-hide="[listItemAddActive]"></div>
-    <div class="group-mixed">
+    <div class="group-mixed vertically-centered">
       <a href class="group-mixed--middle link" swiper-click="swipeToContext()">
         <span class="text-link">no context</span>
       </a>
