Added reward for clicking blinking text

--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -611,6 +611,9 @@
         <span class="text-heading">blinking text</span></a> anywhere
         in the app to find new places and unlock features
       </div>
+
+      <div id="test" ng-if="blinkingTextClicked"class="textgroup-ingress row">nice going! now click on
+      the button below</div>
     </div>
 
   </section>
