--- a/frontend/core/src/main/webapp/static/app/main/settings.html
+++ b/frontend/core/src/main/webapp/static/app/main/settings.html
@@ -15,7 +15,7 @@
       <span class="text-heading-primary">features</span></br>
     </p>
 
-    <div class="group-mixed with-checkbox">
+    <div class="group-mixed">
       <div class="group-mixed--left">
         <input type="checkbox" class="downplayed" checked="true" ng-true-value="true" icon-checkbox="'tasks'" disabled/>
       </div>
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <div class="group-mixed with-checkbox">
+    <div class="group-mixed">
       <div class="group-mixed--left">
         <input type="checkbox" ng-model="settings.notes" ng-true-value="true"
           icon-checkbox="'notes'" ng-click="featureCheckboxClicked('notes')"/>
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div class="group-mixed with-checkbox">
+    <div class="group-mixed">
       <div class="group-mixed--left">
         <input type="checkbox" ng-class="isToggleDisabled('lists') && 'downplayed'"
          ng-model="settings.lists" ng-true-value="true"
@@ -45,7 +45,7 @@
       </div>
     </div>
 
-    <div class="group-mixed with-checkbox">
+    <div class="group-mixed">
       <div class="group-mixed--left">
         <input type="checkbox" ng-model="settings.inbox" ng-true-value="true"
           icon-checkbox="'inbox'" ng-click="featureCheckboxClicked('inbox')"/>
@@ -55,7 +55,7 @@
       </div>
     </div>
 
-    <div class="group-mixed with-checkbox">
+    <div class="group-mixed">
       <div class="group-mixed--left">
         <input type="checkbox" ng-model="settings.contexts" ng-true-value="true"
           icon-checkbox="'contexts'" ng-click="featureCheckboxClicked('contexts')"/>
@@ -65,7 +65,7 @@
       </div>
     </div>
 
-    <div class="group-mixed with-checkbox" ng-if="showArchiveFeature()">
+    <div class="group-mixed" ng-if="showArchiveFeature()">
       <div class="group-mixed--left">
         <input type="checkbox" ng-model="settings.archive" ng-true-value="true"
           icon-checkbox="'archive'" ng-click="featureCheckboxClicked('archive')"/>
@@ -80,7 +80,7 @@
       <span class="text-heading-primary">general</span></br>
     </p>
 
-    <div class="group-mixed with-checkbox">
+    <div class="group-mixed">
       <div class="group-mixed--left">
         <input type="checkbox" ng-model="settings.hideFooter" ng-true-value="true" icon-checkbox="'hideFooter'"
           ng-click="settingsCheckboxClicked('hideFooter')"/>
@@ -90,7 +90,7 @@
       </div>
     </div>
 
-    <div class="group-mixed with-checkbox">
+    <div class="group-mixed">
       <div class="group-mixed--left">
         <input type="checkbox" ng-model="settings.disableVibration" ng-true-value="true"
           icon-checkbox="'disableVibration'" ng-click="settingsCheckboxClicked('disableVibration')"/>
@@ -103,7 +103,7 @@
     <p ng-if="agendaCalendarSettingVisible" class="row">
       <span class="text-heading-primary">this device</span></br>
     </p>
-    <div ng-if="agendaCalendarSettingVisible" class="group-mixed">
+    <div ng-if="agendaCalendarSettingVisible" class="group-mixed vertically-centered">
       <a href class="group-mixed--middle link" swiper-click="openEditor('user', undefined, 'agendaCalendar')">
         <span class="text-link">agenda calendar</span>
       </a>
